--- a/config-lora.yml
+++ b/config-lora.yml
@@ -1,7 +1,7 @@
-base_model: NousResearch/Meta-Llama-3.1-8B
+base_model: NousResearch/Meta-Llama-3.1-8B-Instruct
 model_type: LlamaForCausalLM
 tokenizer_type: AutoTokenizer
-hub_model_id: bkciccar/llama-3.1-8b-culture-lora
+hub_model_id: bkciccar/llama-3.1-8b-instruct-culture-lora
 
 load_in_8bit: false
 load_in_4bit: false
