--- a/config-llama.yml
+++ b/config-llama.yml
@@ -41,11 +41,11 @@ sample_packing: true
 eval_sample_packing: true
 pad_to_sequence_len: true
 
-wandb_project: "Meta-Llama-3.1-8B_CultureBank_FineTuning"
+wandb_project: "CultureBank_FineTuning"
 wandb_entity: "bcicc"
-wandb_watch: "all"
+wandb_watch:
 wandb_name: "Llama_FFT_02"
-wandb_log_model: "end"
+wandb_log_model:
 
 gradient_accumulation_steps: 4
 micro_batch_size: 2
