--- a/config-mistral-lora.yml
+++ b/config-mistral-lora.yml
@@ -1,7 +1,7 @@
-base_model: Qwen/Qwen2-7B-Instruct
+base_model: mistralai/Mistral-7B-Instruct-v0.1
 model_type: AutoModelForCausalLM
 tokenizer_type: AutoTokenizer
-hub_model_id: bkciccar/qwen2-7b-instruct-culture-fft
+hub_model_id: bkciccar/mistral-7b-instruct-culture-lora
 
 load_in_8bit: false
 load_in_4bit: false
@@ -34,17 +34,28 @@ test_datasets:
         ### Response (true or false):
 
 dataset_prepared_path:
-output_dir: /scratch/bkciccar/outputs/qwen2-7b-fft
+output_dir: /scratch/bkciccar/outputs/mistral-7b-fft
 
 sequence_len: 4096
 sample_packing: true
 eval_sample_packing: true
 pad_to_sequence_len: true
 
+adapter: lora
+lora_model_dir:
+lora_r: 32
+lora_alpha: 16
+lora_dropout: 0.05
+lora_target_linear: true
+lora_fan_in_fan_out: false
+lora_modules_to_save:
+  - embed_tokens
+  - lm_head
+
 wandb_project: "CultureBank_FineTuning"
 wandb_entity: "bcicc"
 wandb_watch:
-wandb_name: "Qwen_FFT_02"
+wandb_name: "Mistral_Lora_FineTuning_Run_01"
 wandb_log_model:
 
 gradient_accumulation_steps: 4
@@ -53,7 +64,7 @@ eval_batch_size: 10
 num_epochs: 4
 optimizer: paged_adamw_8bit
 lr_scheduler: cosine
-learning_rate: 1e-5
+learning_rate: 2e-5
 
 train_on_inputs: false
 group_by_length: false
@@ -74,7 +85,7 @@ warmup_steps: 10
 eval_table_size:
 eval_max_new_tokens: 5
 evals_per_epoch: 16
-saves_per_epoch: 1
+saves_per_epoch: 4
 debug:
 deepspeed:
 weight_decay: 0.0
